--- a/index.html
+++ b/index.html
@@ -2,36 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="netinformer - Get real-time info about your IP, device, headers, WHOIS, and more in a sleek, modern interface." />
-  <meta name="keywords" content="netinformer, IP info, user agent, headers, WHOIS, network info, blocklist, blacklist" />
-  <meta name="author" content="netinformer dev" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="netinformer reveals your IP, hostname, user agent, headers, WHOIS info, and blacklist status.">
+  <meta name="keywords" content="IP info, WHOIS, server headers, blacklist check, user agent, hostname lookup">
+  <meta name="author" content="netinformer">
   <title>netinformer</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>netinformer</h1>
-    <p>Real-time info about your web and network environment</p>
+    <div class="logo">
+      <span class="globe">🌐</span>
+      <span class="title">netinformer</span>
+    </div>
+    <div class="controls">
+      <button id="themeToggle">Toggle Theme</button>
+      <button id="exportTxt">Export as .txt</button>
+      <button id="exportJson">Export as .json</button>
+    </div>
   </header>
 
-  <main id="info-cards">
-    <section class="info-card" id="ipCard"></section>
-    <section class="info-card" id="hostnameCard"></section>
-    <section class="info-card" id="uaCard"></section>
-    <section class="info-card" id="headersCard"></section>
-    <section class="info-card" id="whoisCard"></section>
-    <section class="info-card" id="blacklistCard"></section>
+  <main>
+    <p class="intro">
+      netinformer displays your network and web information — including your IP address, hostname, user agent, server headers, WHOIS info, and blacklist status.
+    </p>
+
+    <section id="ipCard" class="info-card"></section>
+    <section id="hostnameCard" class="info-card"></section>
+    <section id="uaCard" class="info-card"></section>
+    <section id="headersCard" class="info-card"></section>
+    <section id="whoisCard" class="info-card"></section>
+    <section id="blacklistCard" class="info-card"></section>
   </main>
 
-  <section class="about">
-    <h2>About netinformer</h2>
-    <p>netinformer is a real-time network dashboard that pulls your IP address, hostname, browser headers, WHOIS data, and blacklist status. It uses public APIs and delivers the info in a clean, dark UI perfect for devs, analysts, and the curious.</p>
-  </section>
-
-  <footer>
-    <p>Made with ❤️ by netinformer devs</p>
-  </footer>
+  <button id="scrollTop" title="Back to top">↑</button>
 
   <script src="script.js"></script>
 </body>
