--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
   </header>
 
   <main>
-    <p class="intro">
+    <div class="about">
+    <p class="intro" >
       netinformer displays your network and web information — including your IP address, hostname, user agent, server headers, WHOIS info, and blacklist status.
     </p>
-
+    <img src="/assets/Network Information Overview.png" style="width: 200px; ">
+    </div>
     <section id="ipCard" class="info-card"></section>
     <section id="hostnameCard" class="info-card"></section>
     <section id="uaCard" class="info-card"></section>
